# PDFAutoGen

./: README.md  pyproject.toml  run_5000.out
assets/fonts/: README.md
assets/snippets/: academic.json  business.json  common.json  forms.json  invoice.json  policy.json  syllabus.json
bench_out/: manifest.jsonl
configs/: audit_benign.yaml  audit_mixed.example.yaml  benchmark.yaml  benign_5000.yaml  default.yaml  smoke.yaml
debug_out/academic_handout/: manifest.jsonl
debug_out/business_memo_report/: manifest.jsonl
debug_out/form_worksheet/: manifest.jsonl
debug_out/invoice_receipt/: manifest.jsonl
debug_out/policy_notice/: manifest.jsonl
debug_out/syllabus_info/: manifest.jsonl
debug_out2/academic_handout/: manifest.jsonl
debug_out2/business_memo_report/: manifest.jsonl
debug_out2/form_worksheet/: manifest.jsonl
debug_out2/invoice_receipt/: manifest.jsonl
debug_out2/policy_notice/: manifest.jsonl
debug_out2/syllabus_info/: manifest.jsonl
out_benchmark/: manifest.jsonl
out_benchmark_fixed/: manifest.jsonl
out_benchmark_review/: manifest.jsonl
scripts/: audit_dataset.py  download_fonts.py  qa_dataset.py
src/pdf_autogenerator/: __init__.py  cli.py  (+13 more)
tests/: test_audit.py  test_generation.py  test_qa.py  test_templates.py  test_validation.py
tmp_bad_pagecount/: manifest.jsonl
tmp_manifest_dup/: manifest.jsonl
tmp_overwrite_detail/: manifest.jsonl
tmp_overwrite_review/: manifest.jsonl
tmp_overwrite_verify/: manifest.jsonl
tmp_subset_qa/: manifest.jsonl
tmp_subset_verify/: manifest.jsonl
tmp_subset_verify_2/: manifest.jsonl
(+2 files in other folders)
